UrlSourceProcessor: use accept header